tests/fixtures/errors/required_body.h
/**
 * @nb
 */
class Foo {
public:
    /**
     * @nb
     * @nb_name
     */
    void bar();
};
